--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,17 @@
 
-  @import url('https://fonts.googleapis.com/css2?&family=Noto+Sans+Display:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?&family=Noto+Sans+Display:wght@400;700&display=swap');
 
-
-body {
+* {
     margin: 0;
-    font-family: 'Noto Sans Display', sans-serif;
-}
-
-body * {
+    padding: 0;
     box-sizing: border-box;
 }
+
+body {
+    font-family: 'Noto Sans Display', sans-serif;
+    position: relative;
+}
+
 
 .main-login{
     width: 100vw;
@@ -18,7 +20,63 @@ body * {
     display: flex;
     justify-content: center;
     align-items: center;
+    transition: background 0.2s linear;
 }
+
+.main-login.light {
+ background: #bfb5b5;
+}
+
+.box-key {
+    position: absolute;
+    top: 30px;
+    right: 10%;
+    display: flex;
+}
+
+.checkbox {
+    position: absolute;
+    opacity: 0;
+}
+
+.label {
+    background: #111;
+    border-radius: 50px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: relative;
+    padding: 5px;
+    height: 23px;
+    width: 54px;
+    transform: scale(1.5);
+}
+
+.label .ball{
+ background: #fff;
+ border-radius: 35px;
+ position: absolute;
+ top: 1px;
+ left: 1px;
+ height: 20px;
+ width: 20px;
+ transform: translateX(0px);
+ transition: transform 0.2s linear;
+}
+
+.checkbox:checked + .label .ball {
+    transform: translateX(30px);
+}
+
+.ph-sun {
+    color: #fff;
+}
+
+.ph-moon {
+    color: #fff;
+}
+
 
 .left-login {
  width: 50vw;
